Rework interface for processing stored field values (#684)